<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_lock"
        android:name="com.example.projectraptor.Home"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projectraptor.ui.home.HomeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gps"
        android:name="com.example.projectraptor.ui.Data.DataFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_gps" />

    <fragment
        android:id="@+id/nav_missionstatus"
        android:name="com.example.projectraptor.ui.MissionStatment.MissionStatusFragment"
        android:label="@string/menu_lock"
        tools:layout="@layout/fragment_mission_status" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.example.projectraptor.ui.Data.DataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/fragment_data" />


</navigation>